# Smart-classroom

./: README.md
backend/: main.py  requirements.txt
backend/database/: db.py  models.py  schemas.py
backend/routers/: courses.py  faculty.py  llm.py  rooms.py  timetable.py
backend/services/: constraint_solver.py  groq_service.py  timetable_engine.py
data/vector_store/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/admin/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/admin/attendance/: page.tsx
frontend/src/app/(dashboard)/deo/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/faculty/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/notifications/: page.tsx
frontend/src/app/(dashboard)/student/: layout.tsx  page.tsx
frontend/src/components/: AllTimetablesView.tsx  RagChatbot.tsx  Sidebar.tsx  TimetableGrid.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  tabs.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  constants.ts
frontend/src/services/: ragService.ts
frontend/src/types/: rag.types.ts
rag/: .env  .gitignore  API_USAGE.md  QUICKSTART.md  data_ingestion.py  direct_usage.py  embeddings.py  llm.py  main.py  pyproject.toml  requirements.txt  retreival.py  test_api.py  vector_db.py
smartclass/: pom.xml
smartclass/src/main/resources/: application.properties
(+96 files in other folders)
